--- a/Empresa.html
+++ b/Empresa.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SISU</title>
+        <link rel="icon" href="E:\Desktop\Mi sitio web\Sisu\trabajos\Leonardo_Phoenix_Exquisite_highfashion_photography_depicting_a_2-Photoroom.png" type="image/x-icon">
     <style>
         /* Estilos Generales */
         body {
